--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-webview": "11.23.0",
     "react-native-youtube": "^2.0.2",
+    "react-native-youtube-iframe": "^2.2.2",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0"
   },
