--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-youtube": "^2.0.2",
     "react-native-youtube-iframe": "^2.2.2",
     "react-redux": "^8.0.5",
-    "redux": "^4.2.0"
+    "redux": "^4.2.0",
+    "react-native-maps": "0.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
